<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsAdministrador.FragmentModificarNoticia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificarN"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/cherry"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_dark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mfNombreNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/titulo"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/mfFotoNoticia"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/add_foto_usuario" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mfDescripcionNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/descripcion"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/mfRadioCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


                <RadioButton
                    android:id="@+id/radioGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_general" />

                <RadioButton
                    android:id="@+id/radioBioquimica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_bioquimica" />

                <RadioButton
                    android:id="@+id/radioGestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_gestion" />

                <RadioButton
                    android:id="@+id/radioIndustrial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_industrial" />

                <RadioButton
                    android:id="@+id/radioMecatronica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_mecatronica" />

                <RadioButton
                    android:id="@+id/radioNanotecnologia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_nanotecnologia" />

                <RadioButton
                    android:id="@+id/radioSistemas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_sistemas" />

                <RadioButton
                    android:id="@+id/radioTics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_tics" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMfNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnModify"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cherry"/>


    </LinearLayout>

</ScrollView>