<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsAdministrador.FragmentModificarUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/cherry"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_dark"/>

        <ImageView
            android:id="@+id/mfFotoUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/add_foto_usuario" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mfNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"

            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mfLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/lastName"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mfMLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/mLastName"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/mfRolUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/mfEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estudiante" />

            <RadioButton
                android:id="@+id/mfAdministrador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrador" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMfUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnModify"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cherry"/>

    </LinearLayout>

</ScrollView>