<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsInicio.FragmentRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/cherry"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_dark"/>

        <ImageView
            android:id="@+id/fotoUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/add_foto_usuario" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rgName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"

            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rgLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/lastName"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rgMLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/mLastName"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rgEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            android:layout_marginTop="40dp"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:boxStrokeColor="@color/mustard"
            app:hintTextColor="@color/mustard"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/rgRolUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rgEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estudiante" />

            <RadioButton
                android:id="@+id/rgAdministrador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrador" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRgRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cherry"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRgLogin"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/cherry"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="end" />

    </LinearLayout>

</FrameLayout>