<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentsAdministrador.FragmentDetalleNoticia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/white"
        tools:context=".DetalleProducto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detalleTituloNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittle_noticia"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/detalleAutorNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textColor="@color/gray_soft"
                android:text="@string/email"/>


            <ImageView
                android:id="@+id/detalleFotoNoticia"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/img_noticia"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/detalleDescripcionNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textColor="@color/gray_soft"
                android:text="@string/description_noticia"/>

            <TextView
                android:id="@+id/detalleFechaNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textColor="@color/gray_soft"
                android:text="@string/fecha_noticia"/>

        </LinearLayout>

    </ScrollView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        >
        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetalleModificarN"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:text="@string/btnModify"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/cherry"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetalleEliminarN"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:text="@string/btnDelete"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/cherry"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </TableRow>
    </TableLayout>

</FrameLayout>